--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<html>
+<head>
+<title>MQLUNIT</title>
+<meta http-equiv="refresh" content="0; url=https://mqllab.github.io/MQLUNIT" />
+</head>
+<body>
+Please go to <a href="https://mqllab.github.io/MQLUNIT">https://mqllab.github.io/MQLUNIT</a> instead.
+</body>
+</html>
